# 21CMMC

./: .coverage.steven-manjaro.13475.052742  .coverage.steven-manjaro.28057.590358  .coveragerc  .flake8  .gitignore  .npz  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  INSTALLATION.rst  LFs  MANIFEST.in  Pipfile  README.rst  environment_dev.yml  pre_install.sh  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: pre_commit.yaml  test_suite.yaml
ci/: test-env.yml
devel/: filter_valgrind.py  mwe_memory_leak.py  simple_memory_leak_test.py  valgrind_filtered.out
docs/: conf.py  index.rst  requirements.txt  tutorials.rst  usage.rst
docs/faqs/: ParameterRanges.rst
docs/reference/: index.rst  py21cmmc.rst
docs/tutorials/: MultiNest.ipynb  mcmc_cmb.ipynb  mcmc_global.ipynb  mcmc_intro.ipynb  mcmc_lightcone.ipynb  test_class_21cmfast.ipynb  warmup.py
src/: core.py  emulator.py  likelihood.py  test_21cmmc.py
src/21CMMC.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/py21cmmc/: MultiNest.ipynb  __init__.py  _utils.py  analyse.py  core.py  cosmoHammer.py  emulator.py  emulator_constants.npz  ensemble.py  likelihood.py  mcmc.py
src/py21cmmc/cosmoHammer/: CosmoHammerSampler.py  LikelihoodComputationChain.py  __init__.py  storage.py  util.py
src/py21cmmc/data/: .nfs0000000000487a6500000015  HERA_H1C_IDR3.npz  LF_lfuncs_z10.npz  LF_lfuncs_z6.npz  LF_lfuncs_z7.npz  LF_lfuncs_z8.npz  LF_sigmas_z10.npz  LF_sigmas_z7.npz  LF_sigmas_z8.npz  NeutralFractionPDF_SmallHII.out  NeutralFractionsForPDF.out
src/py21cmmc/data/Forests/Bosman18/: NOTES  data.npy  data.npz
src/py21cmmc/data/Forests/Bosman18/PDF_ErrorCovarianceMatrix_GP/: NOTES  z5pt0.npy  z5pt2.npy  z5pt4.npy  z5pt6.npy  z5pt8.npy  z6pt0.npy
src/py21cmmc/data/Forests/Bosman21/: tau_mapping.npy
src/py21cmmc/data/Forests/Bosman21/PDF_ErrorCovarianceMatrix_GP/: z5pt0.npy  z5pt1.npy  z5pt2.npy  z5pt3.npy  z5pt4.npy  z5pt5.npy  z5pt6.npy  z5pt7.npy  z5pt8.npy  z5pt9.npy  z6pt0.npy  z6pt1.npy  z6pt2.npy
src/py21cmmc/data/Forests/Bosman21/fbias_FGPA/: z5pt0.npy  z5pt1.npy  z5pt2.npy  z5pt3.npy  z5pt4.npy  z5pt5.npy  z5pt6.npy  z5pt7.npy  z5pt8.npy  z5pt9.npy  z6pt0.npy  (+2 more)
tests/: conftest.py  test_emulator.py  test_hera_lk.py  test_luminosity_lk.py  test_mcmc.py  test_multinest.py  test_planck_lk.py  test_ultranest.py  test_zeus.py
(+89 files in other folders)
